using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Blackboard
{
    public readonly static string PlayerTag = "Player";
    public readonly static string BreakableObject = "Breakable";
    public readonly static string Axe = "Axe";
    public static readonly string AnimationStarted = "Started";
    public static readonly string AnimationJump = "Jump";
    public static readonly string AnimationAttack = "Attack";
    public static readonly string WidePathBorderTag = "WidePathBorder";

    public static readonly string StatusTapToStart = "Tap to start";
    public static readonly string StatusDeadTapToStart = "Dead. Tap to start";
}


